WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294077
(New-test)TestWebKitAPI.WKWebExtensionAPITabs.CreateTabsOverflowIndex is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=294077
Summary
(New-test)TestWebKitAPI.WKWebExtensionAPITabs.CreateTabsOverflowIndex is a co...
Dawn Morningstar
Reported
2025-06-05 11:29:13 PDT
TestWebKitAPI.WKWebExtensionAPITabs.CreateTabsOverflowIndex is a constant failure and has been failing since it was added at
295750@main
https://commits.webkit.org/295750@main
This crashes on Debug queues and fails on x86_64 on release HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKWebExtensionAPITabs.CreateTabsOverflowIndex
Test-run:
https://build.webkit.org/#/builders/1236/builds/2314
STDIO:
https://build.webkit.org/#/builders/1236/builds/2314/steps/23/logs/json
Crash: "name": "TestWebKitAPI.WKWebExtensionAPITabs.CreateTabsOverflowIndex", "output": "ASSERTION FAILED: index <= _tabs.count\n/Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/cocoa/WebExtensionUtilities.mm(789) : -[TestWebExtensionWindow openNewTabAtIndex:]\n1 0x103951c70 -[TestWebExtensionWindow openNewTabAtIndex:]\n2 0x10394a204 __77-[TestWebExtensionManager initForExtension:extensionControllerConfiguration:]_block_invoke.11\n3 0x10364b7b8 invocation function for block in TestWebKitAPI::WKWebExtensionAPITabs_CreateTabsOverflowIndex_Test::TestBody()\n4 0x10392c404 -[TestWebExtensionsDelegate webExtensionController:openNewTabUsingConfiguration:forExtensionContext:completionHandler:]\n5 0x14cea20ac WebKit::WebExtensionContext::tabsCreate(std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&)\n6 0x14a4199e0 auto void IPC::callMemberFunction<WebKit::WebExtensionContext, WebKit::WebExtensionContext, void (std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>, void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>(WebKit::WebExtensionContext*, void (WebKit::WebExtensionContext::*)(std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>&&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&)::'lambda'(auto&&...)::operator()<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>(auto&&...) const\n7 0x14a4198e0 decltype(std::declval<WebKit::WebExtensionContext>()(std::declval<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>>(), std::declval<WebKit::WebExtensionTabParameters>())) std::__1::__invoke[abi:sn190102]<void IPC::callMemberFunction<WebKit::WebExtensionContext, WebKit::WebExtensionContext, void (std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>, void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>(WebKit::WebExtensionContext*, void (WebKit::WebExtensionContext::*)(std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>&&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&)::'lambda'(auto&&...), std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>(WebKit::WebExtensionContext&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>&&, WebKit::WebExtensionTabParameters&&)\n8 0x14a4198ac decltype(auto) std::__1::__apply_tuple_impl[abi:sn190102]<void IPC::callMemberFunction<WebKit::WebExtensionContext, WebKit::WebExtensionContext, void (std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>, void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>(WebKit::WebExtensionContext*, void (WebKit::WebExtensionContext::*)(std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>&&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&)::'lambda'(auto&&...), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>, 0ul, 1ul>(WebKit::WebExtensionContext&&, WebKit::WebExtensionContext&&, std::__1::__tuple_indices<0ul, 1ul>)\n9 0x14a419860 decltype(auto) std::__1::apply[abi:sn190102]<void IPC::callMemberFunction<WebKit::WebExtensionContext, WebKit::WebExtensionContext, void (std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>, void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>(WebKit::WebExtensionContext*, void (WebKit::WebExtensionContext::*)(std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>&&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&)::'lambda'(auto&&...), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>>(WebKit::WebExtensionContext&&, WebKit::WebExtensionContext&&)\n10 0x14a418000 void IPC::callMemberFunction<WebKit::WebExtensionContext, WebKit::WebExtensionContext, void (std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>, void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>(WebKit::WebExtensionContext*, void (WebKit::WebExtensionContext::*)(std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&), std::__1::tuple<std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters>&&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&)\n11 0x14a363480 void IPC::handleMessageAsync<Messages::WebExtensionContext::TabsCreate, IPC::Connection, WebKit::WebExtensionContext, WebKit::WebExtensionContext, void (std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&)>(IPC::Connection&, IPC::Decoder&, WebKit::WebExtensionContext*, void (WebKit::WebExtensionContext::*)(std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::WebExtensionTabParameters const&, WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<std::__1::optional<WebKit::WebExtensionTabParameters>, WTF::String>&&)>&&))\n12 0x14a359eec WebKit::WebExtensionContext::didReceiveMessage(IPC::Connection&, IPC::Decoder&)\n13 0x14d1f0198 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&)\n14 0x14bdaaf70 WebKit::WebProcessPool::dispatchMessage(IPC::Connection&, IPC::Decoder&)\n15 0x14bdbe304 WebKit::WebProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&)\n16 0x14aa0d2b4 WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&)\n17 0x14d1ba050 IPC::Connection::dispatchMessage(IPC::Decoder&)\n18 0x14d1ba478 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>)\n19 0x14d1bac74 IPC::Connection::dispatchIncomingMessages()\n20 0x14d1df32c IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_1::operator()() const\n21 0x14d1df288 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_1, void>::call()\n22 0x116298af4 WTF::Function<void ()>::operator()() const\n23 0x1163642fc WTF::RunLoop::performWork()\n24 0x11636857c WTF::RunLoop::performWork(void*)\n25 0x19e4e1cd4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__\n26 0x19e4e1c68 __CFRunLoopDoSource0\n27 0x19e4e19d4 __CFRunLoopDoSources0\n28 0x19e4e0628 __CFRunLoopRun\n29 0x19e4dfc58 CFRunLoopRunSpecific\n30 0x19faaec78 -[NSRunLoop(NSRunLoop) runMode:beforeDate:]\n31 0x10393d8b8 TestWebKitAPI::Util::run(bool*)" Failure: "name": "TestWebKitAPI.WKWebExtensionAPITabs.CreateTabsOverflowIndex", "output": "\n/Volumes/Data/worker/Apple-Sequoia-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPITabs.mm:283\nExpected equality of these values:\n configuration.index\n Which is: 9223372036854775808\n (9223372036854775807L *2UL+1UL)\n Which is: 18446744073709551615"
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-05 11:37:20 PDT
<
rdar://problem/152666936
>
a_kutirakulam
Comment 2
2025-06-05 15:33:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46389
EWS
Comment 3
2025-06-05 15:38:32 PDT
Committed
295895@main
(76cdf8e125e3): <
https://commits.webkit.org/295895@main
> Reviewed commits have been landed. Closing PR #46389 and removing active labels.
Dawn Morningstar
Comment 4
2025-06-12 10:17:55 PDT
This is continuing to fail on MacOS queues
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKWebExtensionAPITabs.CreateTabsOverflowIndex
a_kutirakulam
Comment 5
2025-06-16 17:12:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46828
EWS
Comment 6
2025-06-17 11:15:18 PDT
Committed
296327@main
(c272d5a8afcc): <
https://commits.webkit.org/296327@main
> Reviewed commits have been landed. Closing PR #46828 and removing active labels.
a_kutirakulam
Comment 7
2025-06-26 12:13:26 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/47254
EWS
Comment 8
2025-06-26 20:51:03 PDT
Committed
296705@main
(fcf76aadbe80): <
https://commits.webkit.org/296705@main
> Reviewed commits have been landed. Closing PR #47254 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug