(New-test)TestWebKitAPI.WKWebExtensionAPITabs.CreateTabsOverflowIndex is a constant failure rdar://152666936 https://bugs.webkit.org/show_bug.cgi?id=294077

Reviewed by Timothy Hatcher.

The line of code that bounds the overflow number to the tab count
(which was going to happen regardless) is now done before the assertion check.

* Tools/TestWebKitAPI/cocoa/WebExtensionUtilities.mm:
(-[TestWebExtensionWindow openNewTabAtIndex:]):

Canonical link: https://commits.webkit.org/295895@main